--- a/Netflix clone/index.html
+++ b/Netflix clone/index.html
@@ -1,38 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflic clone</title>
-    <link rel="stylesheet" href = "Styles/Netflix.css">
+    <link rel="stylesheet" href="Styles/Netflix.css">
 </head>
+
 <body>
 
-    <section class = "header">
+    <section class="header">
         <nav>
             <!-- Logo -->
             <a href="index.html"><img src="/Images/Netflix-logo.png"></a>
 
-            <div class ="nav-bar">
+            <div class="nav-bar">
                 <ul>
-                    <li> <a href="/index.html" >Home</a></li>
-                    <li> <a href="/series.html" >Series</a></li>
-                    <li> <a href="/films.html" >Films</a></li>
-                    <li> <a href="/my-list.html" >My List</a></li>
+                    <li> <a href="/index.html">Home</a></li>
+                    <li> <a href="/series.html">Tv Shows / Series</a></li>
+                    <li> <a href="/films.html">Films</a></li>
+                    <li> <a href="/my-list.html">My List</a></li>
                 </ul>
             </div>
         </nav>
-
-
-
-
-
-
-
     </section>
 
 
 
+    <div>
+        <video id="video-fluid" width="100%" loop >
+            <source src="/ONE PIECE _ Official Trailer _ Netflix.mp4" type="video/mp4">
+        </video>
+        <button id="playPauseButton">Play</button>
+    </div>
+
+    <div class="Movie-container">
+        <h1> Popular On Netlfix</h1>
+        <div id = "popular"></div>
+
+
+
+        <h1>Films</h1>
+        <div id="movie">
+
+        </div>
+
+        <h1>Trending Now</h1>
+        <div id = "trending"></div>
+
+        <h1>TV</h1>
+        <div id = "tv"></div>
+
+    </div>
 
 
 
@@ -46,7 +66,14 @@
 
 
 
-    <script type = "module" src="/Scripts/Netflic.js"> </script>
-    
+
+
+
+
+
+
+    <script type="module" src="/Scripts/Netflic.js"> </script>
+
 </body>
+
 </html>
